kubernetes/argocd/ha-install-diffs.yaml
# collection of differences from upstream that must be in this file
#

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
  name: argocd-repo-server
  # <snip>
  # disable submodules (kubespray)
